# AnalizeLeague

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.ai/: architecture.md  conventions.md  data-sources.md  digest-schema.md  product.md
backend/: README.md  pyproject.toml
backend/app/: config.py
backend/app/api/: main.py  routes.py
backend/app/digest/: builder.py  champions.py  models.py
backend/app/ingest/: base.py  grid.py  riot.py
backend/app/llm/: agent.py  sql.py
backend/app/storage/: db.py
backend/scripts/: seed.py  seed_fake.py
backend/tests/: conftest.py  test_api.py  test_champions.py  test_digest.py  test_grid_stream.py  test_health.py  test_sql_validator.py  test_storage.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/ask/: page.tsx
frontend/app/games/[id]/: page.tsx
frontend/components/: draft-display.tsx  game-card.tsx  gold-chart.tsx  lane-states-table.tsx  nav.tsx  review-agenda.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx  tabs.tsx
frontend/lib/: api.ts  utils.ts
frontend/mocks/: game-baron-throw.ts  game-close.ts  game-victory.ts  index.ts
frontend/types/: digest.ts
